--- a/src/assets/styles/setup/_mixins.scss
+++ b/src/assets/styles/setup/_mixins.scss
@@ -1,7 +1,7 @@
 
 /* Desktop First */
 @mixin for-mobile-layout {
-    @media (max-width: $mobile-breakpoint) {
+    @media (max-width: 600px) {
         @content;
     }
 }
